LOL this is the final version, I just fixed some issues with the details of the listing and the display of the comments for non authenticated users

--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -37,10 +37,10 @@
                     <a class="nav-link" href="{% url 'create' %}">Create Listing</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'userAuctions' %}">MyPostedAuctions</a>
+                    <a class="nav-link" href="{% url 'userAuctions' %}">MyPostedListings</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'won' %}">Auctions Won</a>
+                    <a class="nav-link" href="{% url 'won' %}">Listings Won</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'watchlist_view' %}">Watchlist</a>
